--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -23,3 +23,20 @@ ol, p, pre, small, span, strong, u, ul, var {
   box-sizing: border-box;
   list-style-type: none;
 }
+
+.container{
+  width: 1200px;
+  margin: auto;
+}
+
+.flex-row-space-between{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.flex-column-center{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
