--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -40,3 +40,11 @@ ol, p, pre, small, span, strong, u, ul, var {
   flex-direction: column;
   justify-content: center;
 }
+
+.icon {
+  width: 1em;
+  height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
+}
