--- a/src/styles/element-diy.scss
+++ b/src/styles/element-diy.scss
@@ -2,3 +2,13 @@
 .sca-list.el-table th > .cell{
   color: #4A72AE;
 }
+
+.agentManageTable.el-table th > .cell{
+  color: #959FB4;
+  font-size: 14px;
+}
+
+.agentManageTable.el-table .cell{
+  color: #38435A;
+  font-size: 14px;
+}
