--- a/src/styles/element-diy.scss
+++ b/src/styles/element-diy.scss
@@ -27,3 +27,12 @@
 .projectList-table.el-table .cell{
   color: #959EA9;
 }
+
+
+.userListTable{
+  width: 100%;
+  margin-top: 14px
+}
+.userListTable.el-table th > .cell{
+  color: #4A72AE;
+}
