--- a/src/styles/element-diy.scss
+++ b/src/styles/element-diy.scss
@@ -45,3 +45,7 @@
 .addUserInput.el-select .el-input.is-focus .el-input__inner{
   border-color: #D5DCE3
 }
+
+.editInput .el-input__inner{
+  border: none;
+}
