修改部分样式

--- a/src/components/markdownNice/theme.css
+++ b/src/components/markdownNice/theme.css
@@ -22,7 +22,8 @@
     padding-bottom: 8px;
     margin: 0;
     line-height: 26px;
-    color: black;
+    /*color: black;*/
+    color: #747C8C;
 }
 
 /*标题*/
