--- a/src/styles/element-diy.scss
+++ b/src/styles/element-diy.scss
@@ -99,3 +99,8 @@
 .el-table__footer {
   border-bottom: 1px solid #c8e0ff;
 }
+
+.scanRadioGroup.el-radio-button__orig-radio:checked + .el-radio-button__inner {
+  background-color: #4a72ae;
+  border-color: #4a72ae;
+}
