--- a/src/styles/element-diy.scss
+++ b/src/styles/element-diy.scss
@@ -110,3 +110,9 @@
 .deploySelect .el-input__inner {
   height: 38px;
 }
+
+
+.poolDetail-tab .el-tabs__item{
+  width: 100px;
+  text-align: center;
+}
