增加版本控制

--- a/src/styles/iconfont/iconfont.css
+++ b/src/styles/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2239779 */
-  src: url('iconfont.woff2?t=1622693483949') format('woff2'),
-       url('iconfont.woff?t=1622693483949') format('woff'),
-       url('iconfont.ttf?t=1622693483949') format('truetype');
+  src: url('iconfont.woff2?t=1623297307682') format('woff2'),
+       url('iconfont.woff?t=1623297307682') format('woff'),
+       url('iconfont.ttf?t=1623297307682') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.iconicon_details_edit:before {
+  content: "\e607";
+}
+
+.iconicon_details_banben:before {
+  content: "\e608";
 }
 
 .iconicon_yingyong_zhuagntai:before {
