组织管理：增加用户密码重置功能 引擎管理：增加运行中、未运行的标签过滤条件 漏洞列表：增加状态过滤功能

--- a/src/styles/element-diy.scss
+++ b/src/styles/element-diy.scss
@@ -63,11 +63,11 @@
 }
 
 .commonSelect.el-select .el-input__inner:focus {
-  border-color: #fff;
+  border-color: #C0C4CC;
 }
 
 .commonSelect.el-select .el-input.is-focus .el-input__inner {
-  border-color: #fff;
+  border-color: #C0C4CC;
 }
 
 .commonInput .el-input__inner {
