--- a/src/styles/iconfont/iconfont.css
+++ b/src/styles/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2239779 */
-  src: url('iconfont.woff2?t=1651830455035') format('woff2'),
-       url('iconfont.woff?t=1651830455035') format('woff'),
-       url('iconfont.ttf?t=1651830455035') format('truetype');
+  src: url('iconfont.woff2?t=1653648128924') format('woff2'),
+       url('iconfont.woff?t=1653648128924') format('woff'),
+       url('iconfont.ttf?t=1653648128924') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,18 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.iconUnion:before {
+  content: "\e6b7";
+}
+
+.iconshezhi:before {
+  content: "\e6b8";
+}
+
+.iconexport:before {
+  content: "\e6b9";
 }
 
 .iconyanzheng:before {
