--- a/src/styles/iconfont/iconfont.css
+++ b/src/styles/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2239779 */
-  src: url('iconfont.woff2?t=1653648128924') format('woff2'),
-       url('iconfont.woff?t=1653648128924') format('woff'),
-       url('iconfont.ttf?t=1653648128924') format('truetype');
+  src: url('iconfont.woff2?t=1653984795567') format('woff2'),
+       url('iconfont.woff?t=1653984795567') format('woff'),
+       url('iconfont.ttf?t=1653984795567') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,22 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.iconnew:before {
+  content: "\e6ba";
+}
+
+.iconshengji1:before {
+  content: "\e6bb";
+}
+
+.iconpiliagnshengji:before {
+  content: "\e6bc";
+}
+
+.iconbanben:before {
+  content: "\e6bd";
 }
 
 .iconUnion:before {
